--- a/templ/index.html
+++ b/templ/index.html
@@ -1,28 +1,34 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTDHTML4.01Transitional//EN">
 <html>
-<HEAD>
-<link rel=STYLESHEET href="styles.css" type="text/css">
-<META http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<title>{TITLE}</title>
-<meta name="Title" content="{TITLE}">
-<meta name="Description" content="{DESCRIPTIONS}">
-<meta name="KeyWords" content="{KEYWORDS}">
-<META http-equiv="Content-Style-Type" content="text/css">
-<meta name="robots" content="index,all">
-<SCRIPT src="include/forum.js" type=text/javascript></SCRIPT>
+	<HEAD>
+		<link rel="STYLESHEET" href="styles.css" type="text/css">
+		<META http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>{TITLE}</title>
+		<meta name="Title" content="{TITLE}">
+		<meta name="Description" content="{DESCRIPTIONS}">
+		<meta name="KeyWords" content="{KEYWORDS}">
+		<META http-equiv="Content-Style-Type" content="text/css">
+		<meta name="robots" content="index,all">
+		<SCRIPT src="include/forum.js" type="text/javascript"></SCRIPT>
 
-<link rel="icon" href="/pictures/c_0.gif">
-<link rel="shortcut icon" href="/pictures/c_0.gif">
+		<link rel="icon" href="/pictures/c_0.gif">
+		<link rel="shortcut icon" href="/pictures/c_0.gif">
 
-</HEAD>
-<BODY bgcolor="#eaeff4">
-<center>
-<TABLE width="1250" height="100%" cellpadding="0" cellspacing="0" background="../img/backl.gif" border="0">
-	<TR valign="top"><TD height="80">{TOP}</TD></TR>
-	<TR valign="top"><TD>{CENTER}</TD></TR>
-	<TR><TD height="10">{DOWN}</TD></TR>
-</TABLE>
-<center>
-
-</BODY>
+	</HEAD>
+	<BODY bgcolor="#eaeff4">
+		<center>
+			<TABLE width="1250" height="100%" cellpadding="0" cellspacing="0" background="../img/backl.gif" border="0">
+				<TR valign="top">
+					<TD height="80">{TOP}</TD>
+				</TR>
+				<TR valign="top">
+					<TD>{CENTER}</TD>
+				</TR>
+				<TR>
+					<TD height="10">{DOWN}</TD>
+				</TR>
+			</TABLE>
+			<center></BODY>
+		</html>
+	</body>
 </html>
