--- a/templ/print.html
+++ b/templ/print.html
@@ -1,46 +1,124 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTDHTML4.01Transitional//EN">
 <html>
-<HEAD>
-<link rel=STYLESHEET href="styles.css" type="text/css">
-<META http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<title>{TITLE}</title>
-<META http-equiv="Content-Style-Type" content="text/css">
-<meta name="robots" content="index,all">
-<SCRIPT src="include/forum.js" type=text/javascript></SCRIPT>
-</HEAD>
-<BODY bgcolor=#e0e0ff>
-<TABLE width="100%" height="100%" bgcolor="#eaeff4" background="./img/fon1.gif" cellpadding="0" cellspacing="0">
-	<TR valign="top"><TD>{TEXT}</TD></TR>
-</TABLE>
+	<HEAD>
+		<link rel="STYLESHEET" href="styles.css" type="text/css">
+		<META http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>{TITLE}</title>
+		<META http-equiv="Content-Style-Type" content="text/css">
+		<meta name="robots" content="index,all">
+		<SCRIPT src="include/forum.js" type="text/javascript"></SCRIPT>
+	</HEAD>
+	<BODY bgcolor="#e0e0ff">
+		<TABLE width="100%" height="100%" bgcolor="#eaeff4" background="./img/fon1.gif" cellpadding="0" cellspacing="0">
+			<TR valign="top">
+				<TD>{TEXT}</TD>
+			</TR>
+		</TABLE>
 
-<!-- ActualAnalyzer Pro(6.96) -->
-<script language="Javascript"><!--
-function antenc(txt) {return escape(txt.replace(/(https?):\/\//ig,"__$1__"))}
-aw=window; aatd=aw.top.document; aasd=aw.self.document; aajs="1.0"; aan=navigator;
-aar=antenc(aasd.referrer); aap=antenc(aw.self.location.href); aasd.cookie="ac=1";
-aac=2; if(aasd.cookie) aac=1; aaf=2; if(self!=top) aaf=1;
-if(aaf==1) {aafr=antenc(aw.top.location.href);if(aafr==aar) aar=antenc(aatd.referrer)}
-else aafr=""; aant=2; if(aan.appName.substring(0,2)=="Mi") aant=1;
-aad=new Date(); aalt=aad.getTimezoneOffset(); arn=Math.round(Math.random()*2000000000);
-//--></script>
-<script language="Javascript1.1"><!--
-aajs="1.1";aaj=2;if(aan.javaEnabled()) aaj=1;
-//--></script>
-<script language="Javascript1.2"><!--
-aajs="1.2";aas=screen;if(aant==1) aacol=aas.colorDepth; else aacol=aas.pixelDepth;
-aaw=aas.width;aah=aas.height;
-//--></script>
-<script language="Javascript1.3"><!--
-aajs="1.3";
-//--></script>
-<script language="Javascript"><!--
-aa="<img border=0 alt='ActualAnalyzer' src='http://f3a-by.com/stat2/aa.php";
-aa+="?anr=" + aar + "&anp="+aap + "&anf="+aaf + "&anfr="+aafr + "&anjs="+aajs + "&anc="+aac + "&anj="+aaj;
-aa+="&ancol="+aacol + "&anwt="+aaw + "&anh="+aah + "&anlt="+aalt + "&arn="+arn + "'>"; aasd.write(aa);
-//--></script><noscript>
-<img border=0 alt='ActualAnalyzer' src='http://f3a-by.com/stat2/aa.php'>
-</noscript>
-<!-- ActualAnalyzer -->
+		<!-- ActualAnalyzer Pro(6.96) -->
+		<script
+			language="Javascript">
+			<!--
+			function antenc(txt) {
+return escape(txt.replace(/(https?):\/\//ig, "__$1__"))
+}
+aw = window;
+aatd = aw.top.document;
+aasd = aw.self.document;
+aajs = "1.0";
+aan = navigator;
+aar = antenc(aasd.referrer);
+aap = antenc(aw.self.location.href);
+aasd.cookie = "ac=1";
+aac = 2;
+if (aasd.cookie) 
+aac = 1;
 
-</BODY>
+
+
+aaf = 2;
+if (self != top) 
+aaf = 1;
+
+
+
+if (aaf == 1) {
+aafr = antenc(aw.top.location.href);
+if (aafr == aar) 
+aar = antenc(aatd.referrer)
+
+
+
+
+
+} else 
+aafr = "";
+
+
+
+aant = 2;
+if (aan.appName.substring(0, 2) == "Mi") 
+aant = 1;
+
+
+
+aad = new Date();
+aalt = aad.getTimezoneOffset();
+arn = Math.round(Math.random() * 2000000000);
+//
+			-->
+		</script>
+		<script
+			language="Javascript1.1">
+			<!--
+			aajs = "1.1";
+aaj = 2;
+if (aan.javaEnabled()) 
+aaj = 1;
+
+
+
+//
+			-->
+		</script>
+		<script
+			language="Javascript1.2">
+			<!--
+			aajs = "1.2";
+aas = screen;
+if (aant == 1) 
+aacol = aas.colorDepth;
+ else 
+aacol = aas.pixelDepth;
+
+
+
+aaw = aas.width;
+aah = aas.height;
+//
+			-->
+		</script>
+		<script
+			language="Javascript1.3">
+			<!--
+			aajs = "1.3";
+//
+			-->
+		</script>
+		<script
+			language="Javascript">
+			<!--
+			aa = "<img border=0 alt='ActualAnalyzer' src='http://f3a-by.com/stat2/aa.php";
+aa += "?anr=" + aar + "&anp=" + aap + "&anf=" + aaf + "&anfr=" + aafr + "&anjs=" + aajs + "&anc=" + aac + "&anj=" + aaj;
+aa += "&ancol=" + aacol + "&anwt=" + aaw + "&anh=" + aah + "&anlt=" + aalt + "&arn=" + arn + "'>";
+aasd.write(aa);
+//
+			-->
+		</script>
+		<noscript>
+			<img border="0" alt='ActualAnalyzer' src='http://f3a-by.com/stat2/aa.php'>
+		</noscript>
+		<!-- ActualAnalyzer -->
+
+	</BODY>
 </html>
